hard-gists/371698/run.log
=== Docker Run Log for 371698 ===
Started at: Mi 29. Okt 13:57:28 CET 2025

[2025-10-29 13:57:28] START: Running container for 371698
[2025-10-29 13:57:29] SUCCESS: Container 08a161a4ef67de2a9b63c2e7005c958ba37fe439f7fad16f97f97e185cf5eb14 started for 371698
=== Container logs for 371698 ===
  File "/snippet.py", line 10
    print 'Creating test-database: ' + db_name
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 371698 ===
[2025-10-29 13:57:31] INFO: Container 08a161a4ef67de2a9b63c2e7005c958ba37fe439f7fad16f97f97e185cf5eb14 has stopped
